--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "framer-motion": "^12.0.6",
+    "lucide-react": "^0.542.0",
     "next": "15.1.6",
     "next-themes": "^0.2.1",
     "react": "19.0.0",
