--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.3",
     "@types/bcrypt": "^5.0.1",
-    "@types/node": "^20.8.9",
+    "@types/node": "20.19.19",
     "@types/react": "19.0.8",
     "@types/react-dom": "19.0.3",
     "eslint": "^9.24.0",
@@ -32,6 +32,6 @@
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4.1.3",
-    "typescript": "^5.2.2"
+    "typescript": "5.7.3"
   }
 }
