--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy:prepare": "node -e \"console.log('Run deploy.bat on Windows or ./deploy.sh on Linux/Mac')\"",
+    "export": "next build && next export"
   },
   "dependencies": {
     "autoprefixer": "^10.4.21",
